[package]
name = "api-server"
version = "0.1.0"
authors = ["Andrew Li <andrew@pesto-pay.com>", "Saurav Mitra <saurav@pesto-pay.com>", "Fu Yong Quah <fuyong@pesto-pay.com>"]

[dependencies]
apns = { git = "https://github.com/sauravm97/apns-rust" }
chrono = { version = "0.4", features = ["rustc-serialize"] }
diesel = { version = "1.1.1", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.10.0"
error-chain = "0.11.0"
protobuf = "1.4.3"
r2d2 = "0.8.2"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "1.0.36"

[features]
tls = ["rocket/tls"]
