[package]
name = "api-server"
version = "0.1.0"
authors = ["Andrew Li <andrew@pesto-pay.com>", "Saurav Mitra <saurav@pesto-pay.com>", "Fu Yong Quah <fuyong@pesto-pay.com>"]

[dependencies]
apns = { git = "https://github.com/sauravm97/apns-rust", optional = true }
chrono = { version = "0.4", features = ["rustc-serialize"] }
diesel = { version = "1.1.1", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.10.0"
error-chain = "0.11.0"
protobuf = "1.4.3"
ring = "0.11.0"
r2d2 = "0.8.2"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = { version = "0.3.6", features = ["handlebars_templates"] }
rustc-serialize = "0.3.24"
serde = "1.0.37"
serde_derive = "1.0.37"

[features]
tls = ["rocket/tls"]
notifications = ["apns"]
