[package]
name = "api-server"
version = "0.1.0"
authors = ["Andrew Li <andrew@pesto-pay.com>", "Saurav Mitra <saurav@pesto-pay.com>", "Fu Yong Quah <fuyong@pesto-pay.com>"]

[dependencies]
apns = { git = "https://github.com/sauravm97/apns-rust", optional = true }
chrono = { version = "0.4.2", features = ["rustc-serialize"] }
diesel = { version = "1.2.2", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.11.0"
error-chain = "0.11.0"
failure = "0.1.1"
protobuf = "1.5.1"
ring = "0.11.0"
r2d2 = "0.8.2"
rocket = "0.3.8"
rocket_codegen = "0.3.8"
rocket_contrib = { version = "0.3.8", features = ["handlebars_templates"] }
rustc-serialize = "0.3.24"
serde = "1.0.38"
serde_derive = "1.0.38"

[features]
tls = ["rocket/tls"]
notifications = ["apns"]
